# Easy-AI-speech-to-text

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  ruff.toml  whisper_transcriber.spec
