[project]
name = "transcribe-whisper"
version = "0.1.0"
description = ""
authors = [
    {name = "Shane", email = "43120257+zhangxingeng@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard",
    "numpy",
    "pyperclip",
    "scipy",
    "sounddevice",
    "torch",
    "torchvision",
    "torchaudio",
    "openai-whisper",
    "pydantic",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
